---------------------------------------------------------------------------------------------------
Version: 0.12.0
Date: ????
  Features:
    - Added 'format' module with various string formatting functions
    - Added 'gui-lite' module
      - A(nother) new GUI library that is much leaner and more convenient to use than the existing one
      - Removes redundant features, simplifies the building process, and enhances type-checking and autocomplete
    - Added 'position' module with various position manipulation functions
  Changes:
      - Changed preferred require syntax to '/' instead of '.'
      - Deprecated 'gui' module in favor of 'gui-lite'
        - 'gui' will be removed and replaced with 'gui-lite` when Factorio 1.2 is released
      - Deprecated 'misc' module in favor of the 'format' and 'position' modules
      - Removed 'queue.load()' and queue metatables
      - Updated type definitions to use generics where possible
---------------------------------------------------------------------------------------------------
Version: 0.11.2
Date: 2022-09-18
  Bugfixes:
    - [dictionary] Fixed a crash when a player left the game under certain circumstances
---------------------------------------------------------------------------------------------------
Version: 0.11.1
Date: 2022-09-12
  Changes:
    - [dictionary] Added tooltip to GUI header explaining what it is
  Bugfixes:
    - [dictionary] Fixed that translations would stop being requested under certain circumstances
---------------------------------------------------------------------------------------------------
Version: 0.11.0
Date: 2022-09-04
  Features:
    - [area] Added `area.square()` to turn the area into a square
    - [area] Added `starting_offset` argument to `area.iterate()`
    - [dictionary] Added a GUI that shows translation progress
    - [math] Added `floored` and `ceiled` for flooring and ceiling to N decimal places.